--- a/appendix-08-terminology.html
+++ b/appendix-08-terminology.html
@@ -189,6 +189,7 @@
 <tr><td>Builder Pattern</td><td>生成器模式</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E7%94%9F%E6%88%90%E5%99%A8%E6%A8%A1%E5%BC%8F">維基百科</a></td></tr>
 <tr><td>byte</td><td>位元組</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%AD%97%E8%8A%82">維基百科</a></td></tr>
 <tr><td>camel case</td><td>駝峰式大小寫</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E9%A7%9D%E5%B3%B0%E5%BC%8F%E5%A4%A7%E5%B0%8F%E5%AF%AB">維基百科</a></td></tr>
+<tr><td>child</td><td>下代</td><td></td></tr>
 <tr><td>clone</td><td>克隆</td><td></td></tr>
 <tr><td>collection</td><td>集合</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E9%9B%86%E5%90%88_(%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%A7%91%E5%AD%A6)">維基百科</a></td></tr>
 <tr><td>command line</td><td>命令列</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%91%BD%E4%BB%A4%E8%A1%8C%E7%95%8C%E9%9D%A2">維基百科</a></td></tr>
@@ -250,6 +251,7 @@
 <tr><td>ownership</td><td>所有權</td><td></td></tr>
 <tr><td>package</td><td>套件</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%BD%AF%E4%BB%B6%E5%8C%85">維基百科</a></td></tr>
 <tr><td>panic</td><td>恐慌</td><td></td></tr>
+<tr><td>parent</td><td>上代</td><td></td></tr>
 <tr><td>parse</td><td>分析、分析語法</td><td></td></tr>
 <tr><td>parser</td><td>語法分析器</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%AA%9E%E6%B3%95%E5%88%86%E6%9E%90%E5%99%A8">維基百科</a></td></tr>
 <tr><td>pattern</td><td>模式</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F_(%E8%AE%A1%E7%AE%97%E6%9C%BA)">維基百科</a></td></tr>
@@ -269,6 +271,7 @@
 <tr><td>segment</td><td>區段</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%A8%98%E6%86%B6%E9%AB%94%E5%88%86%E6%AE%B5">維基百科</a></td></tr>
 <tr><td>segmentation fault</td><td>記憶體區段錯誤</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E8%A8%98%E6%86%B6%E9%AB%94%E5%8D%80%E6%AE%B5%E9%8C%AF%E8%AA%A4">維基百科</a></td></tr>
 <tr><td>shadowing</td><td>遮蔽</td><td></td></tr>
+<tr><td>sibling</td><td>同輩</td><td></td></tr>
 <tr><td>signed integer</td><td>帶號整數</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%95%B4%E6%95%B0_(%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%A7%91%E5%AD%A6)">維基百科</a></td></tr>
 <tr><td>square bracket</td><td>方括號</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E6%8B%AC%E5%8F%B7">維基百科</a></td></tr>
 <tr><td>stack</td><td>堆疊</td><td>參考：<a href="https://zh.wikipedia.org/zh-tw/%E5%A0%86%E6%A0%88">維基百科</a></td></tr>
