--- a/ch11-01-writing-tests.html
+++ b/ch11-01-writing-tests.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2><a class="header" href="#how-to-write-tests" id="how-to-write-tests">How to Write Tests</a></h2>
+                        <h2><a class="header" href="#如何寫測試" id="如何寫測試">如何寫測試</a></h2>
 <p>Tests are Rust functions that verify that the non-test code is functioning in
 the expected manner. The bodies of test functions typically perform these three
 actions:</p>
